corpus/resource.txt
========
Single Message
========

ident=pattern

---

(body
  (message
    (identifier) (pattern)
  )
)

============================
Single Message w/ Whitespace
============================

ident= pattern

---

(body
  (message
    (identifier) (pattern)
  )
)

==============
Single Comment
==============

# First line

---

(body
  (comment)
)
